# rsproxy

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml  package.json  xtask.toml
crates/rsproxy-cli/: Cargo.toml  api.txt
crates/rsproxy-cli/benches/: certificates.rs
crates/rsproxy-cli/examples/: bench_client.rs  bench_origin.rs
crates/rsproxy-cli/src/: app.rs  async_io.rs  benchmark_support.rs  control.rs  dns.rs  error.rs  h2.rs  http.rs  json.rs  lib.rs  logging.rs  main.rs  proxy.rs  request_deadline.rs  rule_store.rs  tests.rs  tui.rs  upstream_body.rs  upstream_h2.rs  upstream_message.rs  upstream_pool.rs  windows_pipe.rs
crates/rsproxy-cli/src/app/: mitm_failures.rs
crates/rsproxy-cli/src/cli/: api.rs  api_auth.rs  args.rs  ca.rs  command.rs  completions.rs  config.rs  daemon.rs  help.rs  mod.rs  output.rs  rules.rs  startup.rs  system_proxy.rs  trace.rs  util.rs
crates/rsproxy-cli/src/control/: auth.rs  replay.rs  router.rs  values.rs
crates/rsproxy-cli/src/error/: tests.rs
crates/rsproxy-cli/src/h2/: body.rs  message.rs  runtime.rs  server.rs
crates/rsproxy-cli/src/http/: request.rs  response.rs
crates/rsproxy-cli/src/json/: har.rs
crates/rsproxy-cli/src/logging/: tests.rs
crates/rsproxy-cli/src/proxy/: forward.rs  h1_forward.rs  h2_bridge.rs  http_flow.rs  mock.rs  request_stream.rs  routing.rs  server.rs  tls.rs  trace_helpers.rs  transforms.rs  tunnel.rs  upstream_response.rs  websocket_forward.rs
crates/rsproxy-cli/src/rule_store/: tests.rs  watch.rs
crates/rsproxy-cli/src/transfer_timing/: tests.rs
crates/rsproxy-cli/src/tui/: format.rs  render.rs  state.rs
crates/rsproxy-cli/src/upstream_h2/: connection.rs  request_body.rs  streaming.rs
crates/rsproxy-cli/tests/: cli_completions.rs  cli_daemon_lifecycle.rs  cli_help.rs  cli_json_contracts.rs  cli_logging.rs  cli_product_matrix.rs  large_stream_resource.rs
crates/rsproxy-cli/tests/cli_daemon_lifecycle/: support.rs
crates/rsproxy-cli/tests/cli_product_matrix/: mod.rs  offline.rs  online.rs  support.rs
crates/rsproxy-cli/tests/it/: cli_help.rs  cli_json_contracts.rs  cli_rule_groups.rs  cli_rules_lint.rs  cli_startup.rs  cli_trace_follow.rs  main.rs
crates/rsproxy-cli/tests/large_stream_resource/: support.rs
crates/rsproxy-control/: Cargo.toml  api.txt
crates/rsproxy-control/src/: client.rs  error.rs  lib.rs  server.rs  shapes.rs
crates/rsproxy-control/src/client/: auth.rs  tests.rs
crates/rsproxy-control/src/error/: tests.rs
crates/rsproxy-control/src/server/: auth.rs  http.rs  query.rs  router.rs  values.rs  windows_pipe.rs
crates/rsproxy-control/src/shapes/: har.rs
crates/rsproxy-control/tests/: public_api.rs
crates/rsproxy-engine/: Cargo.toml  api.txt
crates/rsproxy-engine/benches/: certificates.rs
crates/rsproxy-engine/examples/: bench_client.rs  bench_origin.rs
crates/rsproxy-engine/src/: benchmark_support.rs  bounded_io.rs  certificate.rs  error.rs  handle.rs  lib.rs  proxy.rs  replay.rs  rule_store.rs  state.rs
crates/rsproxy-engine/src/bounded_io/: tests.rs
crates/rsproxy-engine/src/proxy/: auth.rs  body.rs  client_tls.rs  connect.rs  connect_proxy.rs  connect_tls.rs  cookies.rs  deadline_io.rs  forward.rs  h1_forward.rs  h2_bridge.rs  http_flow.rs  mock.rs  request_actions.rs  request_util.rs  response_actions.rs  routing.rs  server.rs  stream.rs  tls.rs  trace_helpers.rs  upstream_response.rs  websocket.rs  websocket_frame.rs
crates/rsproxy-engine/src/replay/: body.rs  tests.rs
crates/rsproxy-engine/src/rule_store/: storage.rs  watch.rs
crates/rsproxy-engine/src/state/: mitm_failures.rs
crates/rsproxy-engine/tests/: errors.rs  public_api.rs  rule_store.rs
crates/rsproxy-engine/tests/it/: main.rs  rule_store.rs
crates/rsproxy-net/: Cargo.toml  api.txt
crates/rsproxy-net/src/: async_io.rs  dns.rs  downstream_h2.rs  error.rs  http.rs  lib.rs  request_deadline.rs  runtime.rs  transfer_timing.rs  upstream_body.rs  upstream_h2.rs  upstream_pool.rs
crates/rsproxy-net/src/downstream_h2/: body.rs  message.rs  server.rs
crates/rsproxy-net/src/http/: request.rs  response.rs
crates/rsproxy-net/src/transfer_timing/: tests.rs
crates/rsproxy-net/src/upstream_body/: tests.rs
crates/rsproxy-net/src/upstream_h2/: connection.rs  pool.rs  streaming.rs
crates/rsproxy-net/tests/: errors.rs  http_buffered_head.rs  http_tcp_head.rs  public_api.rs
crates/rsproxy-net/tests/it/: dns.rs  main.rs  request_deadline.rs
crates/rsproxy-platform/: Cargo.toml  api.txt
crates/rsproxy-platform/src/: ca.rs  error.rs  lib.rs  process.rs  startup.rs  system_proxy.rs
crates/rsproxy-platform/src/ca/: certificates.rs  storage.rs  trust.rs
crates/rsproxy-platform/src/startup/: tests.rs
crates/rsproxy-platform/src/system_proxy/: linux.rs  macos.rs  macos_network.rs  tests.rs  windows.rs
crates/rsproxy-platform/tests/: errors.rs  public_api.rs
crates/rsproxy-platform/tests/it/: ca.rs  main.rs  process.rs
crates/rsproxy-rules/: Cargo.toml  api.txt
crates/rsproxy-rules/benches/: rules.rs
crates/rsproxy-rules/src/: action.rs  bounded_replace.rs  error.rs  explain.rs  family.rs  index.rs  language.rs  lib.rs  lint.rs  matcher.rs  matching.rs  migration.rs  model.rs  planning.rs  redact.rs  resolution_api.rs  resolve.rs  semantic_lint.rs  snapshot_support.rs  template.rs
crates/rsproxy-rules/tests/: complexity.rs  corpus.rs  fuzz_seeds.rs  public_api.rs  whistle_migration.rs  whistle_options.rs
crates/rsproxy-trace/: Cargo.toml  api.txt
crates/rsproxy-trace/benches/: trace.rs
crates/rsproxy-trace/src/: event.rs  lib.rs  model.rs  serialize.rs  spill.rs  store.rs
crates/rsproxy-trace/tests/: public_api.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: check.rs  lib.rs  main.rs  release.rs  targets.rs  tests.rs
crates/xtask/tests/: public_api.rs
fuzz/: Cargo.toml
fuzz/corpus/parse_resolve/: invalid-regex.rules  invalid-syntax.rules  invalid-template.rules  valid-actions.rules  valid-basic.rules  valid-conditions.rules  valid-regex.rules  valid-structured-values.rules
fuzz/fuzz_targets/: parse_resolve.rs
(+476 files in other folders)
