[package]
name = "rsproxy-cli"
description = "Command-line interface and terminal application for the rsproxy debugging proxy."
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[[bin]]
name = "rsproxy"
path = "src/main.rs"

[dependencies]
clap.workspace = true
clap_complete.workspace = true
crossterm.workspace = true
ratatui.workspace = true
rsproxy-control.workspace = true
rsproxy-engine.workspace = true
rsproxy-platform.workspace = true
rsproxy-rules.workspace = true
rsproxy-trace.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true

[lints]
workspace = true
