[package]
name = "rsproxy-net"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
test-support = []

[dependencies]
bytes.workspace = true
hickory-resolver.workspace = true
http-body.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
rustls.workspace = true
thiserror.workspace = true
tokio.workspace = true

[lints]
workspace = true
