[package]
name = "rsproxy-net"
description = "Protocol and transport primitives for rsproxy downstream and upstream connections."
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
test-support = []

[dependencies]
bytes.workspace = true
hickory-resolver.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
rustls.workspace = true
rsproxy-http.workspace = true
thiserror.workspace = true
tokio.workspace = true

[lints]
workspace = true
