[package]
name = "rsproxy-rules"
description = "Parsing, matching, and action evaluation for the rsproxy rule DSL."
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
aho-corasick.workspace = true
fancy-regex.workspace = true
getrandom.workspace = true
regex.workspace = true
regex-syntax.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
serde.workspace = true
toml.workspace = true

[lints]
workspace = true

[[bench]]
name = "rules"
harness = false
