[package]
name = "rsproxy-trace"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
bytes = "1"
rsproxy-rules = { path = "../rsproxy-rules" }
zstd = "0.13"

[dev-dependencies]
criterion = "0.5.1"
serde_json = "1"

[[bench]]
name = "trace"
harness = false
