[package]
name = "rsproxy-trace"
description = "Bounded trace collection, storage, and serialization for rsproxy traffic."
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
bytes.workspace = true
rsproxy-rules.workspace = true
zstd.workspace = true

[dev-dependencies]
criterion.workspace = true
serde_json.workspace = true

[lints]
workspace = true

[[bench]]
name = "trace"
harness = false
