[package]
name = "xtask"
description = "Repository automation and executable contract checks for the rsproxy workspace."
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
indexmap.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
syn.workspace = true
thiserror.workspace = true
toml.workspace = true
toml_edit.workspace = true
yaml-rust2.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
